# py-file2img

./: .gitignore  README.md  build_gui.sh  file2img.py  gui.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
